--- a/META.yml
+++ b/META.yml
@@ -9,6 +9,7 @@ meta-spec:
   version: 1.4
 name: File-Find-Declare
 requires:
+  ExtUtils::MakeMaker: 0
   File::Util: 0
   Moose: 0
   Moose::Meta::TypeConstraint: 0
@@ -19,4 +20,4 @@ requires:
   Test::Exception: 0
   Test::More: 0
   Text::Glob: 0
-version: 0.61
+version: 0.62
